[gd_scene load_steps=7 format=3 uid="uid://kn0koccqa28q"]

[ext_resource type="Script" path="res://GUI/inventory/inventory_gui.gd" id="1_c5uxj"]
[ext_resource type="PackedScene" uid="uid://c4t2ssb8xsd48" path="res://GUI/inventory/character_selection_panel.tscn" id="2_0fsi5"]
[ext_resource type="PackedScene" uid="uid://c21wpigb0wbsp" path="res://GUI/inventory/inventory_panel.tscn" id="3_7p47t"]
[ext_resource type="PackedScene" uid="uid://bn5u6v7ibmq7d" path="res://GUI/inventory/character_panel.tscn" id="4_gllpg"]
[ext_resource type="Texture2D" uid="uid://cge1377fuys03" path="res://GUI/inventory/InventoryRect.png" id="5_wtgy2"]
[ext_resource type="PackedScene" uid="uid://15hdpwxbp3ti" path="res://GUI/inventory/slot_variations/trash_slot.tscn" id="6_oeq2r"]

[node name="InventoryGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c5uxj")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("5_wtgy2")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="TrashSlot" parent="HBoxContainer/NinePatchRect" instance=ExtResource("6_oeq2r")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 6.00001
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="CharacterSelectionPanel" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_0fsi5")]
layout_mode = 2

[node name="InventoryPanel" parent="HBoxContainer/VBoxContainer" instance=ExtResource("3_7p47t")]
layout_mode = 2

[node name="CharacterPanel" parent="HBoxContainer" instance=ExtResource("4_gllpg")]
layout_mode = 2
